<resources>
    <string name="app_name">MD5 Dialog</string>
    <string name="button_name">Generate</string>
    <string name="edittext_hint">Value</string>
</resources>
